# newsletter

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
