[package]
name = "newsletter"
version = "0.1.0"
authors = ["Alex Angelini <alexangelinidev@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"

[dev-dependencies]
reqwest = "0.10"
tokio = "0.2.22"
